<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/_3sdp"
    android:id="@+id/mainCard"
    android:background="@drawable/bg_edit_grey"
    app:rippleColor="@color/grey"
    android:padding="@dimen/_10sdp">

    <ImageView
        android:id="@+id/cardImg"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_25sdp"
        android:contentDescription="@string/saved_farmer"
        android:src="@drawable/ic_check_circle" />

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fullNameTV"
            android:fontFamily="@font/poppins_semibold"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/full_name" />

        <TextView
            android:id="@+id/cropTypeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:visibility="visible"
            android:fontFamily="@font/poppins_medium"
            android:textSize="14sp"
            android:text="@string/crop_type" />

    </LinearLayout>

</LinearLayout>